Fixed menu item spacing in Footer section.

--- a/Website/src/assets/scss/tkot.scss
+++ b/Website/src/assets/scss/tkot.scss
@@ -426,7 +426,7 @@ $tkot-page-header-50-vh: 50vh;
 
 #HomeFooter {
   .nav-item {
-    padding: 3px 0;
+    padding: 4px 0;
   }
   .nav-link {
     font-size: 0.8571em !important;
